# OSFG_Development

./: CHANGELOG.md  CMakeLists.txt  OSFG_Development_Research_Plan.md  README.md  build.bat  run_tests.bat
.claude/: settings.local.json
.github/workflows/: build.yml
config/: osfg_config.ini
demos/: osfg_demo.cpp  osfg_demo_simple.cpp
docs/: architecture.md  configuration.md  contributing.md  debugging.md  fidelityfx-integration-design.md  getting-started.md  index.md  testing.md
docs/api/: app.md  capture.md  ffx-integration.md  fsr-opticalflow.md  interop.md  interpolation.md  opticalflow.md  pipeline.md  presentation.md  transfer.md
src/app/: config_manager.cpp  config_manager.h  hotkey_handler.cpp  hotkey_handler.h  stats_overlay.cpp  stats_overlay.h
src/capture/: dxgi_capture.cpp  dxgi_capture.h
src/ffx/: ffx_framegen.cpp  ffx_framegen.h  ffx_loader.cpp  ffx_loader.h
src/interop/: d3d11_d3d12_interop.cpp  d3d11_d3d12_interop.h
src/interpolation/: frame_interpolation.cpp  frame_interpolation.h
src/opticalflow/: fsr_opticalflow.cpp  fsr_opticalflow.h  osfg_opticalflow.cpp  osfg_opticalflow.h  simple_opticalflow.cpp  simple_opticalflow.h
src/opticalflow/shaders/: optical_flow.hlsl
src/pipeline/: dual_gpu_pipeline.cpp  dual_gpu_pipeline.h
src/presentation/: simple_presenter.cpp  simple_presenter.h
src/transfer/: gpu_transfer.cpp  gpu_transfer.h
tests/: test_capture_display.cpp  test_dual_gpu_pipeline.cpp  test_dxgi_capture.cpp  test_ffx_framegen.cpp  test_ffx_loader.cpp  test_frame_generation.cpp  test_fsr_opticalflow.cpp  test_init_only.cpp  test_interop_display.cpp  test_opticalflow.cpp  test_opticalflow_only.cpp  test_simple_opticalflow.cpp
